@startuml

title __IMPACT's Class Diagram__\n

  namespace  {
    class Individual {
    }
  }
  

  namespace  {
    class MenuNav {
    }
  }
  

  namespace  {
    class Organization {
    }
  }
  

  namespace  {
    class Post {
    }
  }
  

  namespace  {
    class Tester {
    }
  }
  

  namespace  {
    abstract class User {
    }
  }
  

  namespace  {
    class VolunteerPage {
    }
  }
  

  Individual -up-|> User
  Organization -up-|> User
  VolunteerPage -up-|> User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
